# PDFTextExtraction

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
PDFTextExtraction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code/models/: models.ipynb  models.py
code/pdf_extraction/: extraction.py
code/utils/: monitor.py
pdfs/: pyvenv.cfg
scripts/: extract_text.ipynb
