[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "PDFTextExtraction"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"  # Adjust the version as needed
black = "*"
flake8 = "*"
isort = "*"
python-dotenv = "*"
pytesseract = "*"
tabula-py = "2.3.0"
nltk = "3.6.7"
pdfplumber = ">=0.5.28"
pymupdf = "1.24.9"
pypdf = "3.9.1"
pdfrw = "0.4"
streamlit = "*"
transformers = "*"
tensorflow = "*"
